rtsp_client: Race condition in handle_play_request
If shared media is used for example with multicast one will get a race condition in handle_play_request.
What happens is that client1 is doing the handle_play_request: gst_rtsp_media_unsuspend (media) It expects probably that media should be prepared now. and until it is finished setting to play.
But client2 is doing a setup and calling gst_rtsp_media_suspend (media)
Thus client1 might occasionally be working with a suspended media.
Client1 don't want that some other client2 suspends the media. How can this be solved @slomo ?